# HMSCC

./: .dockerignore  .gitignore  CMakeLists.txt  Readme.md  dockerfile
backend/: package-lock.json  package.json  server.js
backend/routes/: compile.js
backend/services/: compilerService.js
compiler/: CMakeLists.txt  output.c  test.hc
compiler/ast/: ast.hpp
compiler/codegen/: codegen.cpp  codegen.hpp
compiler/include/lexer/: lexer.hpp
compiler/include/parser/: parser.hpp
compiler/include/semantic/: semantic.hpp
compiler/lexer/: lexer.cpp  token.hpp
compiler/parser/: parser.cpp
compiler/semantic/: semantic.cpp
compiler/src/: main.cpp
compiler/src/codegen/: codegen.cpp
compiler/src/lexer/: lexer.cpp
compiler/src/parser/: parser.cpp
compiler/src/semantic/: semantic.cpp
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: Editor.jsx  OutputPanel.jsx
frontend/src/services/: api.js
